--- a/note/00.开端.md
+++ b/note/00.开端.md
@@ -176,7 +176,7 @@ int cal(int n) {
 
 ![复杂度量级](resource\复杂度量级.jpg)
 
-##### ​多项式量级
+##### 多项式量级
 
 ###### 常量阶O(1)
 
@@ -564,6 +564,316 @@ LinkedHashMap是双向链表结构
 
 
 
+### 栈
+
+先进后出，后进先出
+操作受限线性表，只在一端插入和删除数据
+使用数组实现：顺序栈
+使用链表实现：链式栈
+操作的时间复杂度是O(1)，空间复杂度也是O(1)，空间复杂度不是按照存储的复杂度来计算，而是在操作过程中使用的额外存储的空间大小
+
+java实现顺序栈
+
+```java
+// 基于数组实现的顺序栈
+public class ArrayStack {
+  private String[] items;  // 数组
+  private int count;       // 栈中元素个数
+  private int n;           // 栈的大小
+
+  // 初始化数组，申请一个大小为 n 的数组空间
+  public ArrayStack(int n) {
+    this.items = new String[n];
+    this.n = n;
+    this.count = 0;
+  }
+
+  // 入栈操作
+  public boolean push(String item) {
+    // 数组空间不够了，直接返回 false，入栈失败。
+    if (count == n) return false;
+    // 将 item 放到下标为 count 的位置，并且 count 加一
+    items[count] = item;
+    ++count;
+    return true;
+  }
+  
+  // 出栈操作
+  public String pop() {
+    // 栈为空，则直接返回 null
+    if (count == 0) return null;
+    // 返回下标为 count-1 的数组元素，并且栈中元素个数 count 减一
+    String tmp = items[count-1];
+    --count;
+    return tmp;
+  }
+}
+```
+
+栈的应用：
+
+​	使用栈进行表达式求值，2个栈，一个用于存储数字，一个用于存储操作符
+
+​		如：1+5x8-5 ,将1,5,8推入数字栈，将+推入操作栈，当将x推入操作栈的时候，由于操作运算符优先级，x进行计算，将5和8进行x运算，结果放入数字栈，之后再将-放入操作栈，最后都是相同优先级运算了，依次出栈进行运算
+
+​	使用栈进行括号匹配，{[{}]}或 [{()}([])] 等都为合法格式，而{[}()] 或 [({)] 为不合法
+
+​		依次遍历，字符串，只将{([等左边的放入栈中，当碰到)}]右边的符号的时候，进行出栈操作，弹出一个符号，进行匹配，是否是一对，是一对则继续遍历，如果不是，说明不合法
+
+​	使用栈进行前进后退的功能实现，以及撤销和重做的功能
+
+​		使用一个后退的栈x，一个前进的栈y，当依次访问a，b，c的时候，将a，b，c依次放入x栈中，当后退时，从x栈中弹出最顶层，放入y，如c弹出，放入y中，此时浏览的是b，如果点击前进，则将y中的c放入x；如当前是b时，再访问d，那么x中是a，b，d，而y要进行清空操作。
+
+
+
+### 队列
+
+先进先出，操作：头部出队，末尾入队
+操作受限线性表结构
+高兴性能队列应用：Disruptor,Linux 环形缓存，Java Concurrent 并发 ArrayBlockingQueue 实现公平锁
+使用数组实现顺序队列，使用链表实现链式队列
+线程池底层实现使用的是队列
+
+![4.队列01](resource\4.队列01.jpg)
+
+#### 数组队列
+
+```java
+// 用数组实现的队列
+public class ArrayQueue {
+  // 数组：items，数组大小：n
+  private String[] items;
+  private int n = 0;
+  // head 表示队头下标，tail 表示队尾下标
+  private int head = 0;
+  private int tail = 0;
+
+  // 申请一个大小为 capacity 的数组
+  public ArrayQueue(int capacity) {
+    items = new String[capacity];
+    n = capacity;
+  }
+
+  // 入队
+  public boolean enqueue(String item) {
+    // 如果 tail == n 表示队列已经满了
+    if (tail == n) return false;
+    items[tail] = item;
+    ++tail;
+    return true;
+  }
+
+  // 出队
+  public String dequeue() {
+    // 如果 head == tail 表示队列为空
+    if (head == tail) return null;
+    String ret = items[head];
+    ++head;
+    return ret;
+  }
+}
+```
+
+这样实现队列在出队的时候有些问题，不停的出队入队之后，head和tail会相同，然后就无法再添加数据了
+
+优化：在出队的时候，不进行任何处理，依然是O(1)，在入队的时候，满了进行数据搬移，时间复杂度是O(n)，最终的平摊时间复杂度是O(1)
+
+```java
+public boolean enqueue2(Object item){
+    if(tail == n){
+        // 进行数据转移判断
+        if(head == 0){
+            // 表示队列真的满了
+            return false;
+        }
+        // 进行数据的搬移
+        for(int i = head;i<tail;i++){
+            items[i-head]=items[i];
+        }
+        // 对tail和head进行重置
+        tail -= head;
+        head = 0;
+    }
+    items[tail]=item;
+    tail +=1;
+    return true;
+}
+```
+
+将head-tail之间的数据，搬移到0-(tail-head)位置上
+
+![4.队列02](resource\4.队列02.jpg)
+
+#### 链表的队列
+
+```java
+import java.util.Iterator;
+
+public class LinkQueue<T> implements Iterable<T> {
+
+    private class Node{
+        Node next;
+        T data;
+    }
+
+    private Node head;
+    private Node tail;
+    private int n = 0;
+
+    public int size(){
+        return n;
+    }
+
+    public boolean isEmpty(){
+        return head == null;
+    }
+
+    /**
+     * 入队
+     * @param data
+     * @return
+     */
+    public boolean enqueue(T data){
+        Node newNode = new Node();
+        newNode.data = data;
+        if(isEmpty()){
+            head = newNode;
+            tail = newNode;
+        }else{
+            tail.next = newNode;
+            tail = newNode;
+        }
+        n += 1;
+        return true;
+    }
+
+    public T dequeue(){
+        T re = head.data;
+        head = head.next;
+        if(isEmpty()){
+            // 注意尾部的释放
+            tail = null;
+        }
+        n -= 1;
+        return re;
+    }
+
+    @Override
+    public Iterator<T> iterator() {
+        return new Iterator<T>() {
+            private Node current = head;
+
+            @Override
+            public boolean hasNext() {
+                return current != null;
+            }
+
+            @Override
+            public T next() {
+                T re = current.data;
+                current = current.next;
+                return re;
+            }
+        };
+    }
+}
+```
+
+![4.队列03](resource\4.队列03.jpg)
+
+#### 循环队列
+
+![4.队列03](resource\4.队列04.jpg)
+
+循环队列中tail不断++操作，队列为空的判断是tail==head，而队列满的情况则是(tail+1)%n=head
+
+注意：少用一个元素空间，约定以"队列头指针在队尾指针的下一位位置上" 作为队列满的标志
+
+![4.队列05](resource\4.队列05.jpg)
+
+```java
+/**
+ * 循环队列
+ * 判断为空还是满的2种情况
+ * 情况1：单独设置一个标识区判断队列是满还是空
+ * 情况2：少用一个元素空间，约定 队列的head在tail的下一个位的位置上 为满
+ */
+public class CircularQueue<T> {
+
+    private Object[] items;
+    private int head = 0;
+    private int tail = 0;
+    private int n;
+
+    CircularQueue(int capcity){
+        n = capcity + 1;
+        items = new Object[n];
+    }
+    public int size(){
+        return (tail - head + n) % n;
+    }
+    /**
+     * 入队操作
+     * @param item
+     * @return
+     */
+    public boolean enqueue(T item){
+        if(nextIndex(tail) == head){ // 表示满了，tail的下一个是head
+            return false;
+        }
+        items[tail] = item;
+        tail = nextIndex(tail); // tail + 1操作
+        return true;
+    }
+    /**
+     * 出队操作
+     * @return
+     */
+    public T dequeue(){
+        if(tail == head) {
+            return null;
+        }
+        Object re = items[head];
+        head = nextIndex(head);
+        return (T)re;
+    }
+    /**
+     * 获取当前位置的下一个位置，由于是环形，使用取余数在最后一个位置+1的时候可以返回到头部
+     * @param current
+     * @return
+     */
+    private int nextIndex(int current){
+        return (current + 1) % n;
+    }
+}
+```
+
+#### 阻塞队列
+
+在队列的基础上添加阻塞，在队列为空的时候从头部取得数据会阻塞，直到有数据取得，如果队列已经满了，那么入队的时候就会阻塞，直到队列有空闲的位置插入数据再返回数据
+
+![4.队列06](resource\4.队列06.jpg)
+
+生产者和消费者模式可以使用阻塞队列，当消费过快，队列为空的时候，消费线程进行阻塞，生产过快，当队列的满的时候进行阻塞操作
+
+#### 并发队列
+
+线程安全的队列，简单实现是直接在enqueue和dequeue上添加锁，但是锁的粒度太大，性能消耗比较高，基于数组的循环，利用cas原子操作，可以实现高效的并发队列，Distruptor框架就是使用循环队列实现的高效并发队列
+
+#### 关于线程池
+
+线程池使用队列的方式，先入先获取资源，先服务，适合存储排队请求
+
+- 基于链表的实现，可以支持一个无界的队列，无限排队，可能会导致过多的请求排队，处理请求响应时间长，针对响应时间比较敏感的系统基于链表的线程池是不合适的
+- 基于数组的实现，有界队列，队列中排队大小超过边界时，请求会被拒绝，对响应时间相对敏感的系统而言就比较合适，不过队列的大小设置比较讲究
+
+
+
+
+
+## 基本算法
+
+### 递归
 
 
 
@@ -588,25 +898,42 @@ LinkedHashMap是双向链表结构
 
 
 
-## 基本算法思想
 
-## 排序
 
-## 搜索
 
-## 查找
 
-## 字符串匹配
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 排序
+
+### 搜索
+
+### 查找
+
+### 字符串匹配
 
 数据结构
 
-## 线性表
+### 线性表
 
-## 散列表
+### 散列表
 
-## 树
+### 树
 
-## 图
+### 图
 
 
 
