--- a/note/00.开端.md
+++ b/note/00.开端.md
@@ -875,49 +875,163 @@ public class CircularQueue<T> {
 
 ### 递归
 
+将问题分解成一个子问题
 
+递归代码要警惕堆栈溢出
 
+如何避免，增加调用深度限制
 
+```java
+// 全局变量，表示递归的深度。
+int depth = 0;
+int f(int n) {
+  ++depth；
+  if (depth > 1000) throw exception;
+  
+  if (n == 1) return 1;
+  return f(n-1) + 1;
+}
+```
 
+要避免重复计算
 
+可以通过存储一个数据结构，如散列表存储已经保存过的结果，这样可以直接使用已经计算的结果
 
+递归的好处是表达能力强，书写简单，但是不足的是空间复杂度高，有堆栈溢出的风险，存在重复计算，过多调用耗时的影响，可以将递归代码写成非递归，采用循环的方式。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+防止有成环状结构数据
 
 ### 排序
+
+稳定性：相同元素的顺序在排序后没有变化（排序是某个特性排序，没有变化表示引用顺序一致），变化的叫做不稳定排序
+
+如：订单排序，含有时间和金额属性，要求是金额从小到大，然后时间是从小到大
+
+采用稳定性排序算法，可以先对时间排序，然后按照金额排序即可，如果是不稳定排序，按照金额排序后，需要对相同的金额再按照时间进行排序，比较复杂
+
+
+
+以下时间复杂度为O(n<sup>2</sup>) ，原地排序，空间复杂度为O(1)
+
+#### 冒泡排序 Bubble Sort
+
+只操作相邻2个数据，每次冒泡操作都会对相邻2个元素进行比较，然后是否满足大小关系，满足后调换顺序，一次冒泡至少移动到它应该在的位置，重复n次，完成n个元素的排序工作
+
+示例一次冒泡操作如下，从小到大排序
+
+![5.排序01](resource\5.排序01.jpg)
+
+进行6次冒泡后，完成排序工作
+
+![5.排序02](resource\5.排序02.jpg)
+
+冒泡的优化：如果在某次操作时，发现没有元素交换了，那么说明已经是有序，可以停止剩下的冒泡操作。
+
+![5.排序03](resource\5.排序03.jpg)
+
+```java
+ // 从小到大排序
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1) return;
+
+    for(int i = 0; i < n; i++){
+        // 提前对出冒泡操作
+        boolean flag = false;
+        for(int j = 0; j < n - i - 1; j++ ){
+            if(arr[j] > arr[j+1]){
+                int tmp = arr[j];
+                arr[j] = arr[j+1];
+                arr[j+1] = tmp;
+                flag = true;
+            }
+        }
+        if(!flag){
+            break;
+        }
+    }
+}
+```
+
+特点：空间复杂度是O(1)，是一个原地排序算法，在判断是否更换顺序时，相等时不进行替换，是一个稳定的排序算法，最好的情况下的时间复杂度是O(n)，最坏的时间复杂度是O(n<sup>2</sup>)
+
+分析：使用有序度近似的判断时间复杂度
+
+有序度(从小到大)，表示按照顺序的元素组合个数
+
+![5.排序04](resource\5.排序04.jpg)
+
+对于倒序的数组，则有序度为0，如果是正序的数组，是满有序度，为n*(n-1)/2
+
+逆序度与有序度相反(从大到小)，逆序度 = 满有序度 - 有序度
+
+![5.排序05](resource\5.排序05.jpg)
+
+冒泡排序每操作一次(比较和交换)，有序度+1，那么交换次数就是逆序度的大小：满有序度-初始有序度，这里示例的冒泡排序的操作大小是15-3=12
+
+冒泡平均情况下，是n*(n-1)/4的交换操作，平均复杂度是O(n<sup>2</sup>)
+
+#### 插入排序 Insertion Sort
+
+![5.排序06](resource\5.排序06.jpg)
+
+插入排序的操作：元素的比较，元素的移动
+
+这里可以发现移动元素的个数3+3+4 = 逆序度大小
+
+基本思想，每一步将一个待排序的记录插入到前面已经排好序的有序序列中，知道所有的元素插入完成为止
+
+ ```java
+
+ ```
+
+
+
+
+
+
+
+#### 选择排序
+
+
+
+以下时间复杂度为O(nlogn)
+
+#### 归并排序
+
+#### 快速排序
+
+
+
+以下时间复杂度为O(n)
+
+#### 计数排序
+
+#### 基数排序
+
+#### 桶排序
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ### 搜索
 
