--- a/note/00.开端.md
+++ b/note/00.开端.md
@@ -982,16 +982,43 @@ public static void sort(int[] arr){
 基本思想，每一步将一个待排序的记录插入到前面已经排好序的有序序列中，知道所有的元素插入完成为止
 
  ```java
-
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    // 从1开始
+    for(int i = 1; i < n ;i++) {
+        // 将 a[i] 放入 a[i-1] a[i-2] ... 注意：而a[i-1] a[i-2] ... 的子序列是已排序好的
+        for(int j = i; j >0; j--){
+            if(arr[j] < arr[j-1]){ // 当前比前一个小，那么替换位置,依次替换，而非直接插入
+                int tmp = arr[j];
+                arr[j] = arr[j-1];
+                arr[j-1] = tmp;
+            }else{
+                // 一旦碰到相同的，或者比自己小的，就说明位置找到了，不需要替换了
+                break;
+            }
+        }
+    }
+}
  ```
 
+原地排序：是
 
+空间复杂度：O(1)
 
+稳定的排序算法
 
+时间复杂度：如果排序已经是有序的，不需要进行搬移数据，如果是从头到尾有序数组查询插入位置，每次只需要比较一个数据就可以确定位置，**顺序**的数组的时间复杂度是O(n)，如果是**倒序**的，则每次插入都需要移动数据，而且移动是依次替换，时间复杂度是O(n<sup>2</sup>)，所以平均复杂度也是O(n<sup>2</sup>)
 
 
 
 #### 选择排序
+
+
+
+
 
 
 
