Quick Sort and Merge Sort

--- a/note/00.开端.md
+++ b/note/00.开端.md
@@ -27,6 +27,10 @@
 
 https://github.com/wangzheng0822/algo
 
+可视化算法
+
+https://visualgo.net
+
 ## 复杂度分析
 
 ### 空间复杂度
@@ -911,7 +915,7 @@ int f(int n) {
 
 
 
-以下时间复杂度为O(n<sup>2</sup>) ，原地排序，空间复杂度为O(1)
+>  以下时间复杂度为O(n<sup>2</sup>) ，原地排序，空间复杂度为O(1)
 
 #### 冒泡排序 Bubble Sort
 
@@ -936,7 +940,6 @@ public static void sort(int[] arr){
     if(n <= 1) return;
 
     for(int i = 0; i < n; i++){
-        // 提前对出冒泡操作
         boolean flag = false;
         for(int j = 0; j < n - i - 1; j++ ){
             if(arr[j] > arr[j+1]){
@@ -982,24 +985,24 @@ public static void sort(int[] arr){
 基本思想，每一步将一个待排序的记录插入到前面已经排好序的有序序列中，知道所有的元素插入完成为止
 
  ```java
-public static void sort(int[] arr){
+public static void sort2(int[] arr){
     int n = arr.length;
     if(n <= 1){
         return;
     }
-    // 从1开始
-    for(int i = 1; i < n ;i++) {
-        // 将 a[i] 放入 a[i-1] a[i-2] ... 注意：而a[i-1] a[i-2] ... 的子序列是已排序好的
-        for(int j = i; j >0; j--){
-            if(arr[j] < arr[j-1]){ // 当前比前一个小，那么替换位置,依次替换，而非直接插入
-                int tmp = arr[j];
-                arr[j] = arr[j-1];
-                arr[j-1] = tmp;
+    for(int i = 1; i < n ; i++){
+        int tmp = arr[i];
+        int j = i-1;
+        for(; j>=0; j--){
+            if(tmp < arr[j]){
+                // 不断向后移动
+                arr[j+1] = arr[j];
             }else{
-                // 一旦碰到相同的，或者比自己小的，就说明位置找到了，不需要替换了
                 break;
             }
         }
+        // 都移动完成后，将tmp进行插入
+        arr[j+1] = tmp;
     }
 }
  ```
@@ -1014,25 +1017,392 @@ public static void sort(int[] arr){
 
 
 
-#### 选择排序
+#### 选择排序 Selection Sort
+
+类似于插入排序，区分已排序区间和未排序区间，每次在未排序中找到最小的，与未排序头部元素替换位置，同时头部元素划入到已排序区间中
+
+![5.排序07](resource\5.排序07.jpg)
+
+```java
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    for(int i = 0;i<n;i++){
+        int min = i;
+        for(int j = i+1;j<n;j++){
+            // 找到最小的，并记录索引位置
+            if(arr[j] < arr[min]){
+                min = j;
+            }
+        }
+        // 进行替换操作
+        if(min > i){
+            int tmp = arr[i];
+            arr[i] = arr[min];
+            arr[min] = tmp;
+        }
+    }
+}
+```
+
+选择排序也是原地排序算法，空间复杂度是O(1)，最好最坏时间复杂度是O(n<sup>2</sup>)
+
+**不稳定**的排序算法，每次都需要找到剩余最小未排序元素中最小值和未排序前面的交换，破坏了稳定性，如果有2个相同的元素，那么位置会交换。
+
+插入排序和冒泡排序在操作次数上一致，都是原始数据的逆序度，但是冒泡排序每次移动都要进行3次赋值操作，而有些插入排序只有一次，因此总体上来说插入排序比冒泡要好。
+
+![5.排序08](resource\5.排序08.jpg)
+
+一般排序是使用nlogn的排序方法，上述排序用于理论学习，实际开发使用不多。
+
+
+
+> 以下时间复杂度为O(nlogn)
+
+#### 归并排序 Merge Sort
+
+使用分治思想，将一根问题分割成小的问题，然后将小的问题的结果进行合并，这里使用递归实现归并排序。将数组从中间分割前后2个部分，然后在对前后2个部分再分割，直到分割成2个元素比较大小，然后将再将排序好的子数进行合并
+
+![5.排序09](resource\5.排序09.jpg)
+
+递归实现思路：
+
+递推公式：merge_sort(p...r) = merge(merge_sort(p...q),merge_sort(q+1...r))
+
+终止条件：p >= r 不再次分解
+
+伪代码如下
+
+```java
+// 归并排序算法, A 是数组，n 表示数组大小
+merge_sort(A, n) {
+  merge_sort_c(A, 0, n-1)
+}
+
+// 递归调用函数
+merge_sort_c(A, p, r) {
+  // 递归终止条件
+  if p >= r  then return
+
+  // 取 p 到 r 之间的中间位置 q
+  q = (p+r) / 2
+  // 分治递归
+  merge_sort_c(A, p, q)
+  merge_sort_c(A, q+1, r)
+  // 将 A[p...q] 和 A[q+1...r] 合并为 A[p...r]
+  merge(A[p...r], A[p...q], A[q+1...r])
+}
+```
+
+![5.排序10](resource\5.排序10.jpg)
+```java
+merge(A[p...r], A[p...q], A[q+1...r]) {
+  var i := p，j := q+1，k := 0 // 初始化变量 i, j, k
+  var tmp := new array[0...r-p] // 申请一个大小跟 A[p...r] 一样的临时数组
+  while i<=q AND j<=r do {
+    if A[i] <= A[j] {
+      tmp[k++] = A[i++] // i++ 等于 i:=i+1
+    } else {
+      tmp[k++] = A[j++]
+    }
+  }
+  
+  // 判断哪个子数组中有剩余的数据
+  var start := i，end := q
+  if j<=r then start := j, end:=r
+  
+  // 将剩余的数据拷贝到临时数组 tmp
+  while start <= end do {
+    tmp[k++] = A[start++]
+  }
+  
+  // 将 tmp 中的数组拷贝回 A[p...r]
+  for i:=0 to r-p do {
+    A[p+i] = tmp[i]
+  }
+}
+```
+
+```java
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    sort(arr,0,n-1);
+}
+/**
+	 * @param arr
+	 * @param start 开始索引
+	 * @param end 结束索引
+	 */
+public static void sort(int[] arr,int start,int end){
+    // 递归终止条件
+    if(start >= end) {
+        return;
+    }
+    int middle = (start + end) / 2;
+    // 分治递归
+    sort(arr,start,middle);
+    sort(arr,middle+1,end);
+    // 合并结果
+    merge(arr,start,middle,end);
+}
+/**
+	 * 进行合并操作
+	 * @param arr
+	 * @param start
+	 * @param middle
+	 * @param end
+	 */
+public static void merge(int[] arr,int start,int middle,int end){
+    // 申请一个临时变量用于存储结果
+    int[] tmp = new int[end-start+1];
+    // 左边子数组的起始点与右子数组的起始点
+    int lStart = start,rStart = middle+1,k = 0;
+    for(;lStart<=middle && rStart<=end;){
+        if (arr[lStart] <= arr[rStart]) {
+            tmp[k] = arr[lStart];
+            lStart ++;
+        }else{
+            tmp[k] = arr[rStart];
+            rStart ++;
+        }
+        k++;
+    }
+    // 判断哪个子数组有剩余
+    // 假定左边没有满
+    int reStart = lStart,reEnd = middle;
+    if(lStart > middle){
+        // 左边满了，那么就是右边没有满
+        reStart = rStart;
+        reEnd = end;
+    }
+    // 将剩余的放入
+    for(;reStart<=reEnd;reStart++,k++){
+        tmp[k] = arr[reStart];
+    }
+    // 将tmp替换掉arr中的部分
+    for(int i = 0;i<end-start+1;i++){
+        arr[start+i] = tmp[i];
+    }
+}
+```
+是稳定算法
+时间复杂度分析：
+使用递归操作，那么a问题可以分解为b和c子问题处理，那么递归求解的问题也可以是递推模式
+```cmd
+T(a) = T(b) + T(c) + K
+
+T(1) = C；   n=1 时，只需要常量级的执行时间，所以表示为 C。
+T(n) = 2*T(n/2) + n； n>1
+
+T(n) = 2*T(n/2) + n
+     = 2*(2*T(n/4) + n/2) + n = 4*T(n/4) + 2*n
+     = 4*(2*T(n/8) + n/4) + 2*n = 8*T(n/8) + 3*n
+     = 8*(2*T(n/16) + n/8) + 3*n = 16*T(n/16) + 4*n
+     ......
+     = 2^k * T(n/2^k) + k * n
+     ......
+```
+
+ 当 T(n/2^k)=T(1) 时，也就是 n/2^k=1，那么时间复杂度是O(nlogn),归并排序的时间复杂度很稳定，无论最好还是最坏都是O(nlogn)
+不足：不是原地排序，需要额外的存储空间，空间复杂度是O(n)
+
+#### 快速排序 Quick Sort
+
+类似于归并排序，有分治与分区的思想
+在数据间选择一个任意数据作为分区点pivot，遍历，将大于pivot放在左边，大于pivot放在右边
+
+![5.排序11](resource\5.排序11.jpg)
+
+```java
+递推公式：
+quick_sort(p…r) = quick_sort(p…q-1) + quick_sort(q+1, r)
+终止条件：
+p >= r
+
+// 快速排序，A 是数组，n 表示数组的大小
+quick_sort(A, n) {
+  quick_sort_c(A, 0, n-1)
+}
+// 快速排序递归函数，p,r 为下标
+quick_sort_c(A, p, r) {
+  if p >= r then return
+  
+  q = partition(A, p, r) // 获取分区点
+  quick_sort_c(A, p, q-1)
+  quick_sort_c(A, q+1, r)
+}
+```
+
+分区操作如果使用非原点排序算法，临时开辟空间，实现是简单的，但是作为原地优化算法，需要对原先的arr完成分区操作
+
+```java
+partition(A, p, r) {
+  pivot := A[r]
+  i := p
+  for j := p to r-1 do {
+    if A[j] < pivot {
+      swap A[i] with A[j]
+      i := i+1
+    }
+  }
+  swap A[i] with A[r]
+  return i
+```
+
+![5.排序12](resource\5.排序12.jpg)
+
+快速排序不是稳定的算法
+
+与归并的区别，归并是自下而上的，而快速排序是自上而下的
+
+![5.排序13](resource\5.排序13.jpg)
+
+![5.排序14](resource\5.排序14.jpg)
+
+```java
+// 快速排序实现1，算法导论中实现方式
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    sort(arr,0,n-1);
+}
+/**
+	 * @param arr
+	 * @param start 开始位置
+	 * @param end 结束位置
+	 */
+public static void sort(int[] arr,int start,int end ){
+    if(start >= end){
+        return;
+    }
+    // 排序后分区点的最终位置
+    int pivotIndex = partition(arr,start,end);
+    // 对pivot点不进行处理
+    sort(arr,start,pivotIndex-1);
+    sort(arr,pivotIndex+1,end);
+}
+/**
+	 * 获取分区点位置
+	 * @param arr
+	 * @param start
+	 * @param end
+	 * @return 返回分区点的最终位置
+	 */
+private static int partition(int[] arr,int start,int end){
+    // 默认使用当前分区的后一个作为pivot
+    int i = start;
+    for(int j = start;j<end;j++){
+        // 遍历，找到比pivot小的元素，进行交换
+        if(arr[j] < arr[end]){
+            // 此时的arr[i]比arr[j]大，交换顺序，i的左边比arr[i]小，i的右边比arr[i]大
+            // arr[i] 比 arr[end]大
+            swap(arr,i,j);
+            i++;
+        }
+    }
+    // 最后i的位置就是pivot左右数值的分界点位置，arr[i]是大于arr[end]的，交换顺序
+    swap(arr,i,end);
+    return i;
+}
+private static void swap(int[] arr,int i,int j){
+    if(i == j) {
+        return;
+    }
+    int tmp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = tmp;
+}
+```
+实现方式2:双向比对，采用分治遍历
+![5.排序15](resource\5.排序15.jpg)
+
+```java
+// 快速排序实现1，算法导论中实现方式
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    sort(arr,0,n-1);
+}
+/**
+	 * @param arr
+	 * @param start 开始位置
+	 * @param end 结束位置
+	 */
+public static void sort(int[] arr,int start,int end ){
+    if(start >= end){
+        return;
+    }
+    // 排序后分区点的最终位置
+    int pivotIndex = partition(arr,start,end);
+    // 对pivot点不进行处理
+    sort(arr,start,pivotIndex-1);
+    sort(arr,pivotIndex+1,end);
+}
+/**
+	 * 获取分区点位置 注意：需要先左移动，因为pivot使用的是start的位置
+	 * @param arr
+	 * @param start
+	 * @param end
+	 * @return 返回分区点的最终位置
+	 */
+private static int partition(int[] arr,int start,int end){
+    int pivot = arr[start];
+    int left = start,right = end;
+    while(left < right){
+        // 右边不断操作，左移动
+        while(arr[right] > pivot && left < right){
+            right --;
+        }
+        // 当arr[right] < pivot 的时候，将arr[left] 覆盖为 arr[right]
+        if(left < right){
+            // 第一次右移动的时候，需要覆盖，覆盖的元素是arr[start]
+            arr[left] = arr[right];
+            left ++;
+        }
+        // 此时arr[right]的值有2份，并且当前右侧停止，等待左侧右移动
+        while(arr[left] < pivot && left < right){
+            // 不断的左移动
+            left ++;
+        }
+        if(left < right){
+            // 左移动停止，说明当前arr[left] > pivot
+            // 需要将之前的重复值的当前arr[right] 进行覆盖
+            arr[right] = arr[left];
+            right --;
+        }
+    }
+    // 全部停止后，说明left和right相同，并且left的右边是大于pivot，且此时arr[left]是有重复的
+    // 一旦左移动和右移动有停止赋值，就会有双份数据产生，在最后的时候将最后一个重复的数据替换为pivot
+    arr[left] = pivot;
+    return left;
+}
+```
+
+实现方式2比方式1要快，没有了数据的swap操作
+
+https://www.cnblogs.com/xlturing/p/4462402.html
+
+解决了归并排序占用内存高的缺点，是属于原地排序算法，但不是稳定算法，时间复杂度也是O(nlogn)
+
+在极端的情况下，如果是有序的，且每次pivot选择的是最后一个元素，那么分区得到的区间都是不均等的，要进行n次的分区操作，每次扫描n/2个元素，那么时间复杂度是O(n<sup>2</sup>)，快排大多数情况下的时间复杂度都是O(nlogn)
 
 
 
 
-
-
-
-以下时间复杂度为O(nlogn)
-
-#### 归并排序
-
-#### 快速排序
-
-
-
-以下时间复杂度为O(n)
+> 以下时间复杂度为O(n)
 
 #### 计数排序
+
+
 
 #### 基数排序
 
