--- a/note/01.开端-算法-排序.md
+++ b/note/01.开端-算法-排序.md
@@ -7,21 +7,21 @@
 ​	大话数据结构
 ​	**算法图解**
 进阶：
-​	数据结构与算法分析：java语言描述
+**​	数据结构与算法分析：java语言描述**
 面试：
 ​	剑指offer
 ​	编程珠玑
 ​	编程之美
 经典：
 ​	算法导论
-​	算法
+**​	算法**
 
 殿堂级：
 
 ​	计算机程序设计艺术
 
 闲暇：
-​	算法之美
+​	**算法之美**
 ​	数学之美
 ​	算法帝国
 
@@ -348,9 +348,9 @@ public static void merge(int[] arr,int start,int middle,int end){
     }
 }
 ```
-是稳定算法
-时间复杂度分析：
-使用递归操作，那么a问题可以分解为b和c子问题处理，那么递归求解的问题也可以是递推模式
+**稳定排序算法**
+时间复杂度分析：使用递归操作，那么a问题可以分解为b和c子问题处理，那么递归求解的问题也可以是递推模式
+
 ```cmd
 T(a) = T(b) + T(c) + K
 
@@ -549,7 +549,7 @@ private static int partition(int[] arr,int start,int end){
 
 https://www.cnblogs.com/xlturing/p/4462402.html
 
-解决了归并排序占用内存高的缺点，是属于原地排序算法，但不是稳定算法，时间复杂度也是O(nlogn)
+解决了归并排序占用内存高的缺点，是属于原地排序算法，**但不是稳定算法**，时间复杂度也是O(nlogn)
 
 在极端的情况下，如果是有序的，且每次pivot选择的是最后一个元素，那么分区得到的区间都是不均等的，要进行n次的分区操作，每次扫描n/2个元素，那么时间复杂度是O(n<sup>2</sup>)，快排大多数情况下的时间复杂度都是O(nlogn)
 
@@ -581,53 +581,131 @@ https://www.cnblogs.com/xlturing/p/4462402.html
 
 应用：高考分数满分900，从0开始有901个桶，那么50w考生都划分到桶中，每个桶是相同的分数，遍历桶内考生的个数，得出排名，只涉及到遍历，复杂度是O(n)
 
+示例：8个考生，分数0-5，放入A[8]中，考生成绩可以使用桶进行排序，使用C[6]表示桶，下标表示对应的分数
+
+```java
+A[8] = {2，5，3，0，2，3，0，3}
+```
+
+遍历一次获取到所有分数的人的个数
+
+![5.排序17](resource\5.排序17.jpg)
+
+创建一个R[8]表示排序之后的数组，最终的排序的效果如下
+
+![5.排序18](resource\5.排序18.jpg)
+
+对C[6]依次求和，c[i]=c[i]+c[i-1]
+
+![5.排序19](resource\5.排序19.jpg)
+
+遍历数组A，比如从后往前遍历，A[7]的元素是3，那么找到C[3]的位置，里面的值是7，那么A[7]元素放入到R[7-1]上，此时C[3]的值更新为6，依次类推得到最终的R
+
+![5.排序20](resource\5.排序20.jpg)
+
+```java
+public static void sort(int[] arr){
+    int n = arr.length;
+    if(n <= 1){
+        return;
+    }
+    // 查找最大值，生成桶
+    int max = arr[0];
+    for(int i = 1;i < n;i++){
+        if(max < arr[i]){
+            max = arr[i];
+        }
+    }
+    // 生成依次计数桶
+    int[] countArr = new int[max+1];
+    // 设置数组初始值 0
+    for(int i = 0;i < max+1;i++){
+        countArr[i] = 0;
+    }
+    for(int i = 0;i < n;i++){
+        countArr[arr[i]] ++;
+    }
+    // 对计数桶内容依次累加
+    for(int i = 1;i < max+1;i++){
+        countArr[i] += countArr[i-1];
+    }
+    // 声明一个结果
+    int[] re = new int[n];
+    for(int i = 0;i < n;i++){
+        countArr[arr[i]] -= 1;
+        int index = countArr[arr[i]];
+        // index 不可以是负数
+        re[index] = arr[i];
+    }
+    // 将结果拷贝
+    for(int i =0;i<n;i++){
+        arr[i] = re[i];
+    }
+}
+```
+
+时间复杂度是O(n)，计数排序只能使用在数据范围不大的情况下，如果桶的个数k大于数据个数n，那么计数排序就不合适，计数排序只适合非负整数，如果数据是小数，那么可以乘以相依10^x,转换为整数，如果是负数，可以加上10^k转换为相应的非负整数。
+
+**是稳定排序算法**
 
 
-#### 基数排序
 
-#### 
+#### 基数排序 Radix Sort
 
+应用场景，10w个手机号，号码11位，用快排则是nlogn，使用计数，则11位号码桶的个数k明显>10w，使用基数排序，2个号码的前几位，如果a比b大，那么余下的几位就可以不用比较了，
 
+借助稳定性排序算法，从最后一位进行排序，依次往前，排11次得出结果，类似于订单先排序，先进行时间排序，然后进行金额排序，那么在相同金额的情况下，时间也是排序好的，那么对11位数字，从最后一位开始排序，排序好了之后，再对之前的数字进行排序。注意，这里稳定排序是关键。
 
+![5.排序21](resource\5.排序21.jpg)
 
+ 对于每一位进行排序，可以使用桶排序或者计数排序，复杂度是O(n)，那么k位的排序可以的复杂度可以是O(k*n)，当k不大的时候，比如手机号码的排序，那么就是11位，O(11n)，时间复杂度就是O(n)。
 
+基数排序的时间复杂度近似于O(n)。
 
+如果对位数不统一的排序，那么需要补齐操作，如英文单词补齐操作，单个字母有ascii码，那么字母值都是大于0，那么补充0就不会影响到排序结果，可以继续使用基数排序
 
+**基数排序对数据有要求**，需要可以分割出独立的“位”，而且位之间有明显的递进关系，每一位的数值范围不能太大，否则不能使用桶排序或者计数排序。
 
+#### 汇总
 
+![5.排序22](resource\5.排序22.jpg)
 
+优化快排：
 
+一般的排序使用快速排序而不使用归并排序，因为归并排序不是原地排序，同时对快速排序要进行优化处理，如pivot点的选择上有讲究，最理想的分区点是分开的2个区，元素个数差不多，如果选择第一个或者最后一个，在某些情况下快排的最坏时间复杂度就是O(n<sup>2</sup>)
 
+对pivot取点的策略：
 
+- 三数取中法：取得区间的第一位，最后一位，中间一位，获得中间值作为pivot，如果数组太大的话，那么就要在分多个位数抽取，5取中，或者10取中。
+- 随机法：随机抽取一个
 
+对快排还有递归的限制，快排因为使用的是递归来实现的，那么就有可能会内存溢出
 
+- 限制递归的深度，设置阈值
+- **堆上模拟调用栈**，手动模拟压榨栈和出栈操作。没有了系统栈的限制。
 
+举例分析：
 
+- glibc中的qsort()排序：
 
+优先使用归并排序，由于归并的空间复杂度是O(n)，对于小数据量的排序可以使用，如1k，2k，如果数据量太大，qsort就使用快速排序算法进行排序操作。qsort采用的是三数取中法。qsort模拟了一个调用栈，手动模拟递归来解决。在快速排序中，如果区间的元素个数小于4，那么就使用了插入排序，不再使用递归排序进行处理，在小数据规模下，O(n<sup>2</sup>)不一定比O(nlogn)差，因为前面可能有系数k或者常量C，这些在小数据规模下就比较大了。
 
+- Arrays.sort的排序：
 
+主要采用TimSort算法, 大致思路是这样的：
 
+1 元素个数 < 32, 采用二分查找插入排序(Binary Sort)
+2 元素个数 >= 32, 采用归并排序，归并的核心是分区(Run)
+3 找连续升或降的序列作为分区，分区最终被调整为升序后压入栈
+4 如果分区长度太小，通过二分插入排序扩充分区长度到分区最小阙值
+5 每次压入栈，都要检查栈内已存在的分区是否满足合并条件，满足则进行合并
+6 最终栈内的分区被全部合并，得到一个排序好的数组
 
+Timsort的合并算法非常巧妙：
 
-### 搜索
-
-### 查找
-
-### 字符串匹配
-
-数据结构
-
-### 线性表
-
-### 散列表
-
-### 树
-
-### 图
-
-
-
-
+1 找出左分区最后一个元素(最大)及在右分区的位置
+2 找出右分区第一个元素(最小)及在左分区的位置
+3 仅对这两个位置之间的元素进行合并，之外的元素本身就是有序的  
 
 
 
