--- a/note/01.开端-算法-排序.md
+++ b/note/01.开端-算法-排序.md
@@ -140,7 +140,7 @@ public static void sort(int[] arr){
 
 这里可以发现移动元素的个数3+3+4 = 逆序度大小
 
-基本思想，每一步将一个待排序的记录插入到前面已经排好序的有序序列中，知道所有的元素插入完成为止
+基本思想，每一步将一个待排序的记录插入到前面已经排好序的有序序列中，直到所有的元素插入完成为止
 
  ```java
 public static void sort2(int[] arr){
