--- a/note/03.开端-树结构.md
+++ b/note/03.开端-树结构.md
@@ -2,5 +2,45 @@
 
 ![数据结构与算法](resource\数据结构与算法.jpg)
 
-## 二叉树
+## 树 Tree
+
+> 非线性结构
+
+![8.树1](resource\8.树1.jpg)
+
+每个元素：节点
+
+相邻节点之间的关系：父子关系
+
+![8.树2](resource\8.树2.jpg)
+
+A是B的父节点，B是A的子节点，BCD是兄弟节点
+
+E是根节点（没有父节点），GHIJKL是叶子节点（没有子节点）
+
+节点的高度 Height：**节点到叶子节点**的最长路径（边数）
+
+节点的深度 Depth：**根节点到这个节点**所经历的边数
+
+节点的层数 Level：节点的深度+1
+
+树的高度：根节点的高度
+
+![8.树4](resource\8.树4.jpg)
+
+### 二叉树 Binary Tree
+
+
+
+
+
+### 二叉查找树
+
+### 平衡二叉查找树
+
+### 红黑树
+
+### 递归树
+
+
 
