--- a/note/03.开端-树结构.md
+++ b/note/03.开端-树结构.md
@@ -198,52 +198,58 @@ public void insert(int data){
 ```java
 public void delete(int data){
     // 先指向根节点
-    Node p = tree;
+    Node current = tree;
     // 查询得到data的父节点
-    Node pp = null;
-    while(p != null){
-        if(data == p.data){
+    Node parent = null;
+    while(current != null){
+        if(data == current.data){
             break;
         }
-        pp = p;
-        p = data > p.data ? p.right : p.left;
+        parent = current;
+        current = data > current.data ? current.right : current.left;
     }
     // 没有找到
-    if(p == null){
+    if(current == null){
         return;
     }
+
     // 要删除的节点有左右子节点
-    if(p.right != null && p.left != null){
-        Node minP = p;
-        Node min = minP.right;
+    if(current.right != null && current.left != null){
+        Node minParent = current;
+        Node min = minParent.right;
         // 找到右子树中最小的节点
         // 在右子树的左子树进行遍历，得到最小点，左边比右边小
+        // 或者可以找到左子树最大的点也是可以的
         while(min.left != null){
-            minP = min;
-            min = minP.left;
+            minParent = min;
+            min = minParent.left;
         }
         // 说明min.left 为null，那么在右子树的最小节点就找到了
-        p.data = min.data;
-        p = min;
-        pp = minP;
+        // 只需要将data进行替换，left和right不需要替换
+        current.data = min.data;
+        // 将min给current，minParent给Parent
+        // 接下来的操作是对min点的删除
+        // 此时的min点就是叶子节点
+        current = min;
+        parent = minParent;
     }
-
     // 删除节点是叶子节点，或者只有一个子节点
     Node child = null;
-    if(p.left != null){
-        child = p.left;
+    if(current.left != null){
+        child = current.left;
     }
-    if(p.right != null){
-        child = p.right;
+    if(current.right != null){
+        child = current.right;
     }
 
     // 删除的是根节点
-    if(pp == null){
+    if(parent == null){
         tree = child;
-    }else if(pp.left == p){
-        pp.left = child;
+    }else if(parent.left == current){
+        // 判断current在parent的具体位置，进行替换为child
+        parent.left = child;
     }else {
-        pp.right = child;
+        parent.right = child;
     }
 }
 ```
@@ -326,7 +332,9 @@ n <= 1+2+4+8+...+2^(L-2)+2^(L-1)
 
 左右子树尽量对称平衡，那么树的高度会保持一个很矮的状态，从而达到时间复杂度维持在O(logn)，因此，只要树的高度不比O(logn)大很多，那么就可以是一个合格的平衡二叉树。
 
-#### 红黑树 Red-Black Tree 
+
+
+#### 红黑树 Red-Black Tree *
 
 > R-B Tree 不严格的平衡二叉查找树
 >
@@ -338,10 +346,82 @@ n <= 1+2+4+8+...+2^(L-2)+2^(L-1)
 这里示例的节点去除了空的黑色节点
 ![](resource\8.树19.jpg)
 
+红黑树是近似平衡的，性能不会退化的太严重
+
+##### 时间复杂度
+
+树的时间复杂度与树的高度有关，那么计算红黑树的高度即可计算出时间复杂度，由于红黑树的红色节点和黑色节点是交替的，那么先将红色节点去除，至少是一个完全二叉树，那么完全二叉树的高度是log<sub>2</sub>n（全部黑色的节点的高度是小于log<sub>2</sub>n的），再将红色点添加回来，层数*2，那么是2log<sub>2</sub>n，时间复杂度等价于O(logn)
+
+![](resource\8.树20.jpg)
+
+##### 与其他树的比较
+
+其他的平衡二叉树：Treap，Splay Tree 在大多情况下，操作的效率比较高，无法避免极端情况下的时间复杂度的退化，如果对单次操作比较敏感的情况下考虑，并不适用
+
+AVL是高度平衡的二叉树，查找效率高，但是每次插入和删除都要调整，对于频繁插入和删除操作数据集合AVL代价就比较高了
+
+红黑树做到了近似的平衡，在维护平衡性上比AVL性能要高，而且插入删除和查询操作都比较稳定，因此在工业级别使用红黑树。
+
+##### 实现思想
+
+类似于魔方复原，针对不同的节点排布，进行相应的调整，设计要求：
+
+- **根节点**是黑色的
+- 每个叶子节点都是黑色的，并且为空NIL，叶子节点不存储数据
+- 任何相邻的节点不能是红色的，红色节点被黑色节点隔开
+- 每个节点到其他可以到达该节点的叶子节点，包含相同数据的黑色节点
+
+在插入和删除节点后，会将后2条破坏掉，因此要恢复后2条。
+
+操作
+
+- 左旋 rotate left：围绕某个节点左旋
+
+- 右旋 rotate right：围绕某个节点右旋
+
+![](resource\8.树21.jpg)
+
+###### 插入操作的平衡调整
+
+- 插入的节点必须是红色
+
+- 二叉树插入的节点都是放在叶子节点上
+
+- 如果插入的父节点是黑色的，不用处理
+
+- 如果插入的节点是根节点，改变节点为黑色
+
+- 其他情况下要进行**左右旋转**和**改变颜色**
+
+定义：正在处理的节点--**关注节点**，随着不停的迭代处理，而不断变化，初始的关注节点就是插入节点
+
+插入节点后有3中情况：需要不断调整，满足红黑树的要求
 
 
 
 ### 递归树
 
+使用递归树求解时间复杂度，如斐波拉契数列的计算的复杂度
 
+![9.递归树1](resource\9.递归树1.jpg)
+
+归并排序使用递归树进行计算时间复杂度
+
+![9.递归树2](resource\9.递归树2.jpg)
+
+每次分解操作的代价很低，时间的损耗可以看做1，归并算法中比较耗时的是归并操作，每层的归并的数组长度之和都相同，都是n，如果树的高度是h，那么可以得到时间复杂度O(n*h)，而归并算法的递归树是一个**满二叉树**，h=logn，那么时间复杂度就是O(nlogn)，
+
+#### 分析快速排序的时间复杂度 * 
+
+快速排序在分区均分的情况下，时间复杂度是比较容易计算的
+
+T(n) = 2T($\frac{n}{2}$)+n，可以推导出O(nlogn)，如果不是一份为二的话，那么就复杂了
+
+考虑1:9的切分情况T(n) = T($\frac{n}{10}$)+T($\frac{9n}{10}​$)+n
+
+![9.递归树3](resource\9.递归树3.jpg)
+
+快速排序中，每次分区都要遍历待分区间的数组的所有元素，那么由于每一层计算的耗时复杂度都是n，然后计算出树的高度h，就可以得到快速排序算法的时间复杂度O(h*n)，如果是满二叉树，那么h就是logn，故快速排序算法的时间复杂度是O(nlogn)
+
+![1551792508977](E:\algorithm-data-structure\note\resource\9.递归树4.jpg)
 
