--- a/note/04.开端-图.md
+++ b/note/04.开端-图.md
@@ -1,2 +1,301 @@
-# 图
+# 图 Graph
 
+非线性表结构
+
+节点元素：顶点 vertex
+
+与节点之间的关系：边 edge
+
+顶点的边的个数：度 degree
+
+**无向图**
+
+![](resource\11.图1.jpg)
+
+**有向图**：边有方向
+
+![](resource\11.图2.jpg)
+
+度分为**出度（Out-degree）**，**入度（In-degree）**
+
+已微博为例，入度表示粉丝数目，出度表示关注数目
+
+**带权图**：weighted graph
+
+![](resource\11.图3.jpg)
+
+每条边有一个权重
+
+qq中的亲密度可以表示
+
+
+
+## 图的存储
+
+### 邻接矩阵 Adjacency Matrix
+
+底层依赖于一个二维数组，行表示节点
+
+```shell
+a[i][j] = 1 表示节点i与节点j相连
+a[i][j] = 3 表示节点i与节点j的权重是3
+对于有向图而言，i节点->j节点 a[i][j]=1 但是a[j][i]=0
+对于无向图而言，a[i][j]=a[j][i]
+```
+
+![](resource\11.图4.jpg)
+
+在无向图中，是按照对角线对称的，图的信息等于存储了2份。造成了内存资源的浪费
+
+如果存储的是稀疏图 Sparse Matix，那么边的关系很少，点的个数很多的话会浪费大量的内存空间，如微信上有几个亿的个用户，每个用户之间维护关系，使用邻接矩阵那么数据量会很大。而且大部分数据是浪费的
+
+优点：存储方式简单，基于数组，获取2个点的关系高效，可以将图的运算转换为矩阵之间的运算
+
+### 邻接表 Adjacency List
+
+![](resource\11.图5.jpg)
+
+邻接矩阵比较浪费空间，但是使用起来比较节省时间，邻接表比较节省空间，但是使用起来比较费时间。
+
+邻接表存储的是链表，链表对cpu缓存不友好，相比于邻接矩阵，查询2个点之间是否有联系就要慢很多。有些优化可以改造链表存储，将链表存储改为平衡二叉树，跳表，散列表等存储，提高查询效率。
+
+#### 关于存储微博的好友关系
+
+在微博实际应用中，微博的好友关系是有向图，需要支持的操作
+
+- 判断A是否关注了B
+- 判断A是否是B的粉丝
+- A关注了B，A 取消关注了B
+- 依据用户名称首字母排序，分页获取用户的粉丝列表，分页获取用户关注列表
+
+社交网络是一个稀松图，因此使用邻接表存储，不光要存储邻接表表示用户的关注信息，还需要一个逆邻表表示用户被关注，也就是粉丝的关系
+
+![](resource\11.图6.jpg)
+
+那么要支持快速查询的动态数据结构，链表结构优化为红黑树，散列表，有序动态数组，跳表？
+
+使用跳表存储，因为用户按照名称首字母存储，那么在插入和删除，查询都很快O(logn)，空间复杂度上O(n)，由于跳表本身存储的是有序的，那么**分页**获取粉丝列表和关注列表就很快速
+
+对于小规模的数据，几万，几十万的数据可以存储在内存中，如果是几个亿的数据，就要使用哈希分片存储，将邻接表和逆邻表存储分片存储在不同的机器上，在查找顶点的关系的时候，使用哈希定位到对应的机器上，然后再在机器上查找。
+
+![](resource\11.图7.jpg)
+
+使用数据库表存储图
+
+![](resource\11.图8.jpg)
+
+对这2列可以添加索引，还可以加一列权重列，可以表示user_id->follower_id
+
+
+
+## 图算法
+
+> 深度优先算法和广度优先算法都可以用在无向图和有向图
+
+基本图结构实现：无向图
+
+```java
+/**
+ * 无向图，邻接表实现
+ * Created by Administrator on 2019/3/7.
+ */
+public class Graph {
+	/**
+	 * 顶点个数
+	 */
+	private int count;
+	/**
+	 * 领接表，使用下标表示点
+	 */
+	private LinkedList<Integer>[] adj;
+
+	public Graph(int count){
+		this.count = count;
+		adj = new LinkedList[count];
+		for(int i = 0;i<count;i++){
+			adj[i] = new LinkedList<>();
+		}
+	}
+	/**
+	 * 无向图一条边存储2次
+	 * @param start
+	 * @param end
+	 */
+	public void addEdge(int start,int end){
+		adj[start].add(end);
+		adj[end].add(start);
+	}
+}
+```
+
+
+
+### 广度优先搜索 BFS 
+
+> Breadth-First-Search 层层推进的搜索策略，先查询离起始点最近的，然后是次近的，得到的路径是最短路径（没有权重的情况下的最短路径）
+>
+> 借助队列实现
+
+![](resource\11.图9.jpg)
+
+实现广度优先算法需要定义3个辅助变量：
+
+- visited
+  - 数组
+  - 记录已经被访问的顶点，避免重复访问
+  - 定义visited[i]=true，表示该点被访问过
+- queue
+  - 队列
+  - 存储已经被访问，但相连的顶点还没有被访问的节点
+  - 将k层顶点访问完毕之后，k+1层点放入queue中进行访问，访问过的弹出queue
+- prev
+  - 数组
+  - 从顶点s开始，到e的结束，prev存储的就是路径，但是是反向存储的，如从3访问到2，那么存储的是prev[2]=3
+  - 输出时，递归输出路径
+
+![](resource\11.图10.jpg)
+![](resource\11.图11.jpg)
+![](resource\11.图12.jpg)
+
+```java
+/**
+	 * 广度优先算法
+	 * 返回路径
+	 * @param start
+	 * @param end
+	 * @return
+	 */
+public int[] dfs(int start,int end){
+    if(start == end){
+        return null;
+    }
+    // 存储已被访问的点
+    boolean[] visited = new boolean[count];
+    // 存储访问队列，从头部返回k层点，从尾部添加k+1层点
+    Queue<Integer> queue = new LinkedList<>();
+    // 存储结果路径
+    int[] prev = new int[count];
+    // 结果路径初始化为-1
+    for(int i=0;i<count;i++){
+        prev[i] = -1;
+    }
+    // 将start节点放入
+    visited[start] = true;
+    queue.add(start);
+    while(!queue.isEmpty()){
+        // 弹出k层节点
+        int current = queue.poll();
+        // 遍历k+1层节点
+        for(int i=0;i<adj[current].size();i++){
+            int next = adj[current].get(i);
+            // 如果当前节点已经访问过，则不进行操作，防止循环图
+            if(visited[next]){
+                continue;
+            }
+            // 设置下一个节点被当前节点访问
+            prev[next] = current;
+            // 找到该节点
+            if(end == next){
+                return prev;
+            }
+            // next节点已经被访问过，不是end节点
+            visited[next] = true;
+            // 将next节点放入queue，等待访问next的下一层关联节点
+            queue.add(next);
+        }
+    }
+    return prev;
+}
+/**
+	 * 打印从start到end的路径
+	 * @param prev
+	 * @param start
+	 * @param end
+	 */
+public void print(int[] prev,int start,int end){
+    if(prev[end] == -1){
+        System.out.println("no route to :"+end);
+        return;
+    }
+    if(start != end){
+        print(prev,start,prev[end]);
+    }
+    System.out.println("->"+end);
+}
+```
+
+时间复杂度分析：
+
+最坏情况下，图上每个点都会被遍历，然后点维护的边的链表里面的边的元素都会被访问，V表示点的个数，E表示边的个数，那么时间复杂度是O(V+E)，对于连通图而言，边的个数会大于等于V-1，因此可以简写为O(E)
+
+空间复杂度分析：
+
+主要内存消耗在visited，queue，prev，而这3个内存结构都与点的个数有关，那么空间复杂度是O(V)
+
+
+
+### 深度优先搜索 DFS
+
+> Depth First Search 类似与走迷宫，开始随意一条路，如果这条路不通则返回上一步继续寻找
+>
+> 得到的路径不一定是最短路径
+>
+> 适合用递归实现，使用回溯思想
+>
+> 借助递归栈实现
+
+![](resource\11.图13.jpg)
+
+上图中，访问到相同的点，则折回到上一个点，继续寻找
+
+与广度优先搜索一样的是，使用visited变量和prev，同时添加一个found变量，表示找到后终止递归操作。
+
+```java
+boolean found = false;
+
+/**
+	 * 深度优先算法
+	 * @param start
+	 * @param end
+	 * @return
+	 */
+public int[] dfs(int start,int end){
+    if(start == end){
+        return null;
+    }
+    boolean[] visited = new boolean[count];
+    int[] prev = new int[count];
+    for(int i=0;i<count;i++){
+        prev[i] = -1;
+    }
+    recursiveDfs(start,end,prev,visited);
+    return prev;
+}
+
+private void recursiveDfs(int k,int end,int[] prev,boolean[] visited){
+    // 找到后，所有在栈中的递归方法都不要继续执行了
+    if(found){
+        return;
+    }
+    visited[k] = true;
+    if(k == end){
+        found = true;
+        return;
+    }
+    // 从start的下层开始查找
+    for(int i=0;i<adj[k].size();i++){
+        int next = adj[k].get(i);
+        if(visited[next]){
+            continue;
+        }
+        prev[next] = start;
+        recursiveDfs(next,end,prev,visited);
+    }
+}
+```
+
+时间复杂度分析：每条边最多访问2次，一次遍历，一次回退，因此图的深度优先搜索的时间复杂度是O(E)
+
+空间复杂度与广度优先搜索一致，也是O(V)，原因也是一样的。
+
+广度优先搜索和深度优先搜索都没有进行优化，都是暴力搜索，适用于图不大的场景，广度是层层推进，从顶点开始依次往外遍历，借助队列思想，最终得到最短路径，而深度则使用回溯思想，借助栈实现，从时间和空间复杂度，二者算法一致。
